# p68_f22

./: README.md  hw1.ipynb  requirements.txt  setup.cfg
bounce_motion/: bounce.py  cyclotron.ipynb  dipole.py  lorentz.py  resources.txt
hw/: hw1.ipynb
