# More info here https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = p68_f88
version = 0.0.1
url='https://github.com/mshumko/p68_f22/'
author='Mykhaylo Shumko'
author_email='msshumko@gmail.com'
long_description = file: README.md
license = GNU GENERAL PUBLIC LICENSE

[options]
packages = find:
install_requires = 
    numpy
    matplotlib
    scipy
python_requires = >= "3.8"